--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "imelgrat/barcode-validator",
+    "name": "vzaichikov/barcode-validator",
     "type": "library",
-    "version" : "v1.1.3",
+    "version" : "v1.1.4",
     "description": "A PHP class for validating EAN, IMEI, ISBN, GTIN, SSCC, GSIN, UPC and other barcodes.",
     "keywords": ["IMEI", "IMEI code", "EAN", "UPC", "GTIN", "ISBN", "EAN code", "UPC code", "GTIN code", "ISBN code", "code validation"],
     "homepage": "https://github.com/imelgrat/barcode-validator",
@@ -10,6 +10,11 @@
         {
             "name": "Ivan Melgrati",
             "homepage": "http://imelgrat.me",
+            "role": "Developer"
+        },
+        {
+            "name": "Victor Zaichikov",
+            "homepage": "https://hobotix.com.ua",
             "role": "Developer"
         }
     ],
